fix application.properties